css/style.css
@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@300;400&display=swap');

:root {
  --primary-color: #b3cde0;
  --secondary-color: #011f4b;
  --tertiary-color: #6497b1;
  --dark-color: #333;
  --light-color: #f4f4f4;
}

/* Reset */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Dosis', sans-serif;
  background: #f5f5f5;
  color: var(--dark-color);
  line-height: 1.6;
}

ul {
  list-style: none;
}

a {
  color: var(--dark-color);
  text-decoration: none;
}

h1,
h2 {
  font-weight: 300;
  line-height: 1.2;
}

p {
  margin: 10px 0;
}

/* Utilities */
/* Text Colors */
.text-primary {
  color: var(--primary-color);
}
.text-secondary {
  color: var(--secondary-color);
}

.text-tertiary {
  color: var(--tertiary-color);
}

/* Buttons */
.btn {
  cursor: pointer;
  display: inline-block;
  padding: 10px 30px;
  color: var(--secondary-color);
  background: var(--primary-color);
  border: none;
  border-radius: 5px;
}

.btn:hover {
  opacity: 0.8;
}

.btn-primary,
.bg-primary {
  background: var(--primary-color);
  color: var(--secondary-color);
}

.btn-secondary,
.bg-secondary {
  background: var(--secondary-color);
  color: var(--primary-color);
}
.btn-tertiary,
.bg-tertiary {
  background: var(--tertiary-color);
  color: var(--primary-color);
}
.btn-dark,
.bg-dark {
  background: var(--dark-color);
  color: white;
}
.btn-light,
.bg-light {
  background: var(--light-color);
  color: black;
}

.btn-outline {
  background: transparent;
  border: 1px solid var(--secondary-color);
}

/* Flex Items */
.flex-items {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  height: 100%;
}

.flex-items > div {
  padding: 6px 20px;
}

/* Flex Columns */
/* Flex Columns */
.flex-columns.flex-reverse .row {
  flex-direction: row-reverse;
}

.flex-columns .row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
}

.flex-columns .column {
  display: flex;
  flex-direction: column;
  flex-basis: 100%;
  flex: 1;
}

.flex-columns .column-1,
.flex-columns .column-2 {
  height: 100%;
}

.flex-columns img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.flex-columns .column-2 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  padding: 30px;
}

.flex-columns h2 {
  font-size: 40px;
  font-weight: 100;
}

.flex-columns h4 {
  margin-bottom: 10px;
}

.flex-columns p {
  margin: 20px 0;
}

/* Header section for Cases */
.section-header {
  padding: 30px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.section-header h2 {
  font-size: 40px;
  margin: 20px 0;
}

.section-padding {
  padding: 20px 20px 40px;
}

/* Flex Grid */
.flex-grid .row {
  display: flex;
  flex-wrap: wrap;
  padding: 0 4px;
}

.flex-grid .column {
  flex: 50%;
  max-width: 50%;
  padding: 0 4px;
}

/* Give images width of 100% of container */
img {
  width: 100%;
}
/* ----------------------------------------------------------- */
/* Navbar */
.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: var(--secondary-color);
  opacity: 0.8;
  width: 100%;
  height: 70px;
  position: fixed;
  top: 0;
  padding: 0 30px;
}

.navbar a {
  color: var(--primary-color);
  padding: 10px 20px;
  margin: 0 5px;
}

.navbar a:hover {
  border-bottom: 2px solid var(--primary-color);
}

.navbar ul {
  display: flex;
}
.navbar li {
  color: var(--primary-color);
}
/* ----------------------------- */
/* hide nested ul by default */
.navbar ul li ul {
  display: none;
}

/* show nested ul when hovering */
.navbar ul li:hover ul {
  display: flex;
  flex-direction: column;
  position: absolute;
  width: 1.8rem;
  margin-left: 5px;
}

.navbar ul li:hover ul li {
  display: block;
  background: var(--primary-color);
  color: black;
  margin-left: -25px;
}

.navbar ul li:hover ul li a {
  color: black;
  font-weight: bold;
  padding: 0 -20px;
  border-bottom: none;
}

.navbar ul li:hover ul li:hover {
  background: var(--tertiary-color);
  color: inherit;
}

/* --------------------- */
.navbar .logo {
  font-weight: 400;
}

/* Hero  */
.hero {
  background: url('../img/london-aerial-30.jpg') no-repeat center center/cover;
  height: 100vh;
  position: relative;
  color: white;
}

.hero .content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  height: 100%;
  padding: 0 20px;
}

.hero .content h1 {
  font-size: 55px;
}
.hero .content p {
  font-size: 23px;
  max-width: 600px;
  margin: 20px 0 30px;
}

.hero.about {
  background: url('../img/library1.jpg') no-repeat center center/cover;
  height: 30vh;
}

.about .content h1 {
  padding-top: 40px;
}

/* Overlay - for about page only*/

.hero.about::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.6);
}

.hero * {
  z-index: 10;
}

/* index#about Page  */
/* Icons  */
.icons {
  padding: 30px;
}

.icons h3 {
  font-weight: bold;
  margin-bottom: 15px;
}

.icons i {
  background: var(--secondary-color);
  color: white;
  padding: 1rem;
  border-radius: 50%;
  margin-bottom: 15px;
}

/* Images */
.cases img:hover {
  opacity: 0.7;
}

/* Footer */
.footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  height: 130px;
}

.footer a {
  color: white;
}

.footer a:hover {
  color: var(--tertiary-color);
}

.footer .charities > * {
  margin-right: 30px;
}

.footer p {
  color: var(--tertiary-color);
}

/* ---------------------------------------------------------------- */

/* Mobile: Tablet or smaller */
@media (max-width: 768px) {
  .hero.about {
    height: 35vh;
  }
  .navbar {
    flex-direction: column;
    height: 120px;
    padding: 20px;
  }

  .navbar a {
    padding: 10px 10px;
    margin: 0 3px;
    z-index: 2;
  }
  /* nested menu item: languages */
  .navbar ul li:hover ul li {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }

  .about .content h1 {
    padding-top: 100px;
    z-index: 1;
    /* display: none; */
  }

  .flex-items {
    flex-direction: column;
  }

  .flex-columns .column,
  .flex-grid .column {
    flex: 100%;
    max-width: 100%;
  }
}

